fix images not showing correctly on Safari

--- a/src/style.scss
+++ b/src/style.scss
@@ -79,6 +79,10 @@ footer {
   display: none;
 }
 
+.pokeImg {
+  width: 100%;
+}
+
 @media (max-width: 760px) {
   .main {
     grid-template-columns: 40% 40%;
@@ -198,11 +202,7 @@ footer {
 }
 
 .pokeImg {
-  width: 100px;
-
-  img {
-    width: 100%;
-  }
+  width: 200px;
 }
 
 .description {
